[vr] Show fallback background if assets fail to load

Bug: 816987
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_vr;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: If1eac6d37494a90463397225ccf51d56326df599
Reviewed-on: https://chromium-review.googlesource.com/940184
Reviewed-by: Christopher Grant <cjgrant@chromium.org>
Commit-Queue: Tibor Goldschwendt <tiborg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539576}
Former-commit-id: 2db5ac93db553803d0b2a85088ea80c586f4d394